# penguin

./: .gitignore  .pengvi.config.json  OVERVIEW.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  release-v1.10.1.sh  sampleDeploy.txt  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  ci.yml  pages.yml
docs/: DOWNLOAD.md  ai-knowledge-vault.md  docs.html  index.html  tutorial.html
docs/assets/: app.js  style.css
docs/superpowers/plans/: 2026-05-28-rest-api-v1.md  2026-05-29-config-sync-and-update-notification.md  2026-06-18-terminal-agents-module.md
docs/superpowers/specs/: 2026-05-28-rest-api-v1-design.md  2026-06-18-terminal-agents-module-design.md
enhancement/: enhancementv1.md
public/: penguin.config.json  pengvi.config.json
requirements/: DOCUMENTATION.md  requirement.md
requirements/penguin-runtime/: ARCHITECTURE.md
scripts/: release-ship.mjs  release.mjs  release.sh  set-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_popover.rs  db.rs  inline_webview.rs  lib.rs  main.rs  mcp.rs  packages.rs  proxy.rs  registry.rs
src-tauri/src/mongo_workspace/: manager.rs  mod.rs  models.rs
src-tauri/src/redis/: commands.rs  connection.rs  keys.rs  mod.rs  registry.rs  stats.rs  value.rs
src-tauri/src/redis_workspace/: manager.rs  mod.rs  models.rs
src-tauri/src/rest/: commands.rs  cookie_store.rs  keychain.rs  mod.rs
src/components/browser/: AliyunSidebar.tsx  AuthPopoverApp.tsx  AuthenticatorContent.tsx  BrowserPage.tsx  JenkinsSidebar.tsx
src/components/database/: DatabasePage.tsx
src/components/docker/: DockerWorkspace.tsx
src/components/docs/: ApiDocsPage.tsx  docs-lark.ts
src/components/environment/: CurlImport.tsx  EnvManager.tsx
src/hooks/: useAppUpdateScheduler.ts  useClock.ts  useDeveloperMode.ts  useEnvironments.ts  useGreeting.ts  usePackages.ts
src/lib/: app-persistence.ts  app-update.ts  clipboard.ts  config-sync.ts  curl-parser.ts  dev-mode-store.ts  docker.ts  environment-persistence.ts  environment-store.ts  environment-sync.ts  error-log-events.ts  error-log-format.ts  error-log-sink.ts  external-links.ts  grpc-native-client.ts  grpc-status.ts  grpc-web-client.ts  header-utils.ts  inline-webview.ts  json-utils.ts  jsonpath-mini.ts  logger.ts  mongo.ts  package-loader.ts  package-manager.ts  penguin-db.ts  penguin-request-id.ts  persistence-keys.ts  proto-parser.ts  proxy-fetch.ts  redis-credential.ts  redis-format.ts  redis-types.ts  redis-value-inspector.ts  redis.ts  remote-config-persistence.ts  response-search.ts  rest-client.ts  rest-events.ts  rest.ts  (+11 more)
template/tauri-react-release-starter/: .gitignore  README.md  index.html  package.json  vite.config.ts
template/tauri-react-release-starter/src-tauri/: Cargo.toml  tauri.conf.json
template/tauri-react-release-starter/src-tauri/capabilities/: default.json
template/tauri-react-release-starter/src-tauri/icons/: icon.icns
template/tauri-react-release-starter/src-tauri/src/: lib.rs  main.rs
tests/: api-docs.test.mjs  app-update-scheduler.test.mjs  config-editor.test.mjs  config-sync.test.mjs  curl-parser.test.mjs  developer-mode.test.mjs  grpc-status.test.mjs  inline-webview.test.mjs  main-sidebar.test.mjs  mcp-app-db.test.mjs  mcp-release-bundle.test.mjs  new-request-dialog.test.mjs  package-spec.test.mjs  packages-npmrc-mirror.test.mjs  penguin-request-id-injection.test.mjs  penguin-request-id.test.mjs  product-shell.test.mjs  proto-parser-nested.test.mjs  redis-module.test.mjs  registry-auth-section.test.mjs  request-headers.test.mjs  response-header-copy.test.mjs  response-search.test.mjs  rest-module.test.mjs  rest.test.mjs  security-performance.test.mjs  settings-dialog.test.mjs  sidecar.test.mjs  theme.test.mjs  vault-card-visual-diff.test.mjs  vault-conflict-recovery.test.mjs  vault-crypto.test.mjs  vault-diff.test.mjs  vault-id-slug.test.mjs  vault-kind-filter.test.mjs  vault-lark-encrypted-flow.test.mjs  vault-lark-url-change.test.mjs  vault-lark-url.test.mjs  vault-project-editor.test.mjs  vault-push-passphrase.test.mjs  (+1 more)
tools/: config-editor.html
(+114 files in other folders)
