[package]
name = "penguin"
version = "1.6.8"
description = "gRPC/gRPC-Web API Client"
authors = ["Penguin"]
edition = "2021"

[lib]
name = "penguin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = "0.25"
glob = "0.3"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
notify = "6.1"
